--- a/index.html
+++ b/index.html
@@ -67,5 +67,11 @@
     </ul>
   </div>
 
+<!-- JQUERY LIBRARY -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+<!-- custom javascript -->
+<script type="text/javascript" src="app.js"></script>
+
 </body>
 </html>
